# webfeed-rs

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.json
public/: style.css
src/: config.rs  error.rs  lib.rs  main.rs
src/routes/: mod.rs
views/: error.hbs  index.hbs  index.nhs  layout.hbs  rss.hbs
