[package]
authors = ["David Barnett <david@barnett.net.nz>"]
name = "webfeed"
version = "0.1.0"

[[bin]]
doc = false
name = "webfeed"
path = "src/main.rs"

[dependencies]
chrono = "0.2.25"
clap = "2.6.0"
env_logger = "0.3.3"
handlebars = "^0.18.0"
handlebars-iron = "^0.15.3"
hyper = "0.9.9"
iron = "0.3.0"
mount = "0.1.0"
router = "0.1.1"
rss = "0.4.0"
rustc-serialize = "0.3.19"
staticfile = "0.2.0"

[features]
unstable = []
watch = ["handlebars-iron/watch"]

[lib]
name = "webfeed"
path = "src/lib.rs"
