[package]
authors = ["David Barnett <david@barnett.net.nz>"]
name = "webfeed"
version = "0.1.0"

[[bin]]
doc = false
name = "webfeed"
path = "src/main.rs"

[dependencies]
chrono = "^0.2.25"
clap = "^2.19.0"
env_logger = "0.3.3"
handlebars = "^0.22.0"
handlebars-iron = "^0.19.2"
hyper = "^0.9"
iron = "^0.4.0"
mount = "^0.2.1"
router = "^0.4.0"
rss = "0.4.0"
rustc-serialize = "0.3.19"
staticfile = "^0.3.1"

[features]
unstable = []
watch = ["handlebars-iron/watch"]

[lib]
name = "webfeed"
path = "src/lib.rs"
